Fixes: cart h3 overflow, add a-logo, show ImageSlider in minicart

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -63,7 +63,6 @@ h1 {
 h3 {
   font-size: 18px;
   font-weight: 300;
-  line-height: 0;
 }
 
 a {
@@ -92,22 +91,31 @@ label {
 }
 
 body {
+  position: relative;
   background-color: $clr-neutral-110;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1500px;
+  z-index: 1;
+}
+
+.a-logo {
+  margin-inline: auto;
+  padding-right: 5rem;
 }
 
 .overlay {
-  position: fixed;
-  display: block;
-  width: 100%;
-  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  cursor: pointer;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 9999;
+}
+
+.img-reversed {
+ -webkit-transform: scaleY(-1);
+  transform: scaleY(-1);
 }
 
 .price-tag {
@@ -263,20 +271,40 @@ nav {
   }
 
   .nav-end {
-    display: flex;
-    justify-content: flex-end;
-    margin-inline: auto;
+    button {
+      border: none;
+      background: inherit;
+      color: $c-black;
+      margin-inline: 1rem;
+    }
   }
 
   .currency-dropdown {
+    .currency-button {
+      display: flex;
+
+      img {
+        max-width: .8rem;
+      }
+
+      & > * {
+        padding-inline: .2rem;
+      }
+    }
     .currency-dropdown-list {
       position: absolute;
+      filter: drop-shadow(0 0.2rem 0.1rem rgba(0, 0, 0, 0.1));
       display: flex;
       flex-direction: column;
       background-color: $clr-neutral-100;
-      filter: drop-shadow(0 0.2rem 0.1rem rgba(0, 0, 0, 0.025));
       list-style: none;
       padding-inline-start: 0;
+      z-index: 9997;
+
+      li:hover {
+        background-color: $clr-neutral-200;
+        cursor: pointer;
+      }
 
       span {
         padding-inline-start: 0.2rem;
@@ -288,18 +316,16 @@ nav {
       }
     }
   }
-
-  & > * {
-    margin-inline: 1rem;
-  }
 }
 
 .minicart {
+     right: 0;
      position: absolute;
      display: flex;
      z-index: 9999;
      max-height: 30rem;
      width: 25rem;
+     padding: 0 1rem 1rem 1rem;
      overflow: auto;
      flex-direction: column;
      background-color: $clr-neutral-100;
@@ -450,22 +476,29 @@ nav {
 }
 
 .product-img-container {
+
+
   display: flex;
   flex-direction: row;
 
-  .img-active {
+  img {
     display: flex;
+    background: $clr-neutral-100;
+
+  }
+
+  .img-active {
     justify-content: flex-end;
     width: 25rem;
     margin-left: 2rem;
   }
 
   .img-inactive {
-    display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    padding-bottom: 1rem;
+    margin-bottom: 1rem;
     width: 3rem;
+    filter: drop-shadow(0 0.2rem 0.1rem rgba(0, 0, 0, 0.05));
   }
 
   .product-img {
